--- a/resume.html
+++ b/resume.html
@@ -174,7 +174,8 @@
   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>  -->
-  <i class="fa fa-linkedin w3-hover-opacity"><a href="https://www.linkedin.com/in/oyedepo-oyerinde/"></a></i>
+  <!-- <i class="fa fa-linkedin w3-hover-opacity"><a href="https://www.linkedin.com/in/oyedepo-oyerinde/"></a></i> -->
+  <a href="https://www.linkedin.com/in/oyedepo-oyerinde/" target="_blank" data-content="https://www.linkedin.com/in/oyedepo-oyerinde/" class="fa fa-linkedin w3-hover-opacity"></a>
   <p>Copyright &copy; Depo Oyerinde 2018</p>
 </footer>
 </body>
