--- a/resume.html
+++ b/resume.html
@@ -107,9 +107,13 @@
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Event Manager / <a href="https://www.nycfirst.org/">NYC FIRST Planning Committee</a></b></h5>
+          <h5 class="w3-opacity"><b>Event Manager/Board Member/ <a href="https://www.nycfirst.org/">NYC FIRST Planning Committee</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>♦ Build relationships across NYC FIRST teams, specifically FIRST Robotics students, mentors, volunteers and professionals</p>
+          <p>♦ Host seminars and workshops on all topics relevant to teams</p>
+          <p>♦ Connect students, mentors, lab space and machines to teams in need</p>
+          <p>♦ Engage professionals and corporations in STEM with teams by hosting different events</p>
+          <p>♦ Support student leadership in the NYC FIRST community by involving students in the organization of events</p>
           <hr>
         </div>
         <div class="w3-container">
@@ -118,14 +122,14 @@
           <p>♦ Represented Lodge at Sectional, Regional and National OA meetings</p>
             <p> ♦ Contingent leader at NEXT </p>     
             <p> ♦ Moved unit elections into an online system </p>   
-            <p> ♦ Helped as an Elangomat during Ordeals to welcome newly elected members into the Brotherhood. </p>
-            <p> ♦ Currently helping Section NE-5 and ArrowCorps send arrowmen to Puerto Rico for one week to help in disaster relief efforts.</p>
+            <p> ♦ Helped as an Elangomat during Ordeals to welcome newly elected members into the Brotherhood </p>
+            <p> ♦ Helped Section NE-5 and ArrowCorps send arrowmen to Puerto Rico for one week to help in disaster relief efforts</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Teacher Assistant / <a href="https://www.yonkerspublicschools.org/">Yonkers Summer Science Research Academy </a> </b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2018</h6>
-          <p>♦ I reinforced the lessons presented by teachers by reviewing material with students one-on-one and in small groups </p>             <p>♦ Enforced school and class rules to help teach students proper behavior </p>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2017</h6>
+          <p>♦ Reinforced the lessons presented by teachers by reviewing material with students one-on-one and in small groups </p>             <p>♦ Enforced school and class rules to help teach students proper behavior </p>
           <p>♦ Helped teachers with record-keeping, such as tracking attendance and calculating grades </p>
              ♦ Helped teachers prepare for lessons by getting materials ready or setting up equipment, such as computers </p>
              ♦ Supervised students in class, during labs, lunch and recess, and on field trips </p><br>
@@ -146,8 +150,8 @@
         <div class="w3-container">
           <h5 class="w3-opacity"><b>ALL STAR CODE</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018</h6>
-          <p>♦ Increased knowledge and experience in JavaScript, HTML, and CSS.</p>
-          <p>♦ Developed my networking, entrepreneurship, computer science and web development skills. </p>
+          <p>♦ Increased knowledge and experience in JavaScript, HTML, and CSS</p>
+          <p>♦ Developed my networking, entrepreneurship, computer science and web development skills </p>
           <hr>
          </div>
        <!--more schools/eduaction -->
@@ -169,18 +173,26 @@
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
+  <div>
   <!-- <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>  -->
-  <!-- <i class="fa fa-linkedin w3-hover-opacity"><a href="https://www.linkedin.com/in/oyedepo-oyerinde/"></a></i> -->
-  <a href="https://www.linkedin.com/in/oyedepo-oyerinde/" target="_blank" data-content="https://www.linkedin.com/in/oyedepo-oyerinde/" class="fa fa-linkedin w3-hover-opacity"></a>
-  <p>Copyright &copy; Depo Oyerinde 2018</p>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>  -->
+    <!-- <i class="fa fa-linkedin w3-hover-opacity"><a href="https://www.linkedin.com/in/oyedepo-oyerinde/"></a></i> -->
+    <a href="https://www.linkedin.com/in/oyedepo-oyerinde/" target="_blank" data-content="https://www.linkedin.com/in/oyedepo-oyerinde/" class="fa fa-linkedin"></a>
+    <a href="https://www.instagram.com/depo1213/" target="_blank" data-content="https://www.instagram.com/depo1213/" class="fa fa-instagram"></a>
+    <a href="github.com/DepoASC5/" target="_blank" data-content="github.com/DepoASC5/" class="fa fa-github"></a>
+      <a class="btn btn-social-icon btn-github">
+        </span>
+      </a>
+     
+
+      </div>
+      <p>Copyright &copy; Depo Oyerinde 2018</p>
 </footer>
 </body>
 </html>
 </body>
 </html>
 
-<!-- still need to fix social media links and add description for NYC FIRST Planning Committee-->
