--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <div>
             
               <label>
-            <span>Your Name</span><input id="name" type="email" placeholder= "Enter your name..." name="name" />
+            <span>Your Name</span><input id="name" type="name" placeholder= "Enter your name..." name="name" />
             </label>
               <label>
                 <span>Email Address</span><input id="email" placeholder= "Email Address..." required="@" type="text" name="email" />
