Added mail feature with reply

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <span>Your Name</span><input id="name" type="name" placeholder= "Enter your name..." name="name" />
             </label>
               <label>
-                <span>Email Address</span><input id="email" placeholder= "Email Address..." required="@" type="text" name="email" />
+                <span>Email Address</span><input id="email" placeholder= "Email Address..." required="@" type="text" name="_replyto" />
               </label>
           
               <label>
