added website logo

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <style>
     html, {font-family: "Roboto", sans-serif}
     </style>
+     <link rel="shortcut icon" href="Brand1.png"/>
     <title>contact</title>
 </head>
 <body>
