--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="alternate.css" rel="stylesheet">
+    <link rel="shortcut icon" href="Brand1.png"/>
     <title>about</title>
 </head>
 <body>
