--- a/resume.html
+++ b/resume.html
@@ -12,8 +12,9 @@
     <style>
     html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </style>
-    <body class="w3-light-grey">
+        <link rel="shortcut icon" href="Brand1.png"/>
     <title>resume</title>
+    <body class="w3-light-grey">
 </head>
 <body>
     <div class="topnav">
