--- a/about.html
+++ b/about.html
@@ -36,8 +36,7 @@
     <section class="about animated fadeInUp delay-2s">
         <div class="container-fluid">
             <div class="row">
-              <div class="col-lg-6 animated slideInLeft" id="item-1" style="background-color:yellow">
-                
+              <div class="col-lg-6 animated slideInLeft" id="item-1">
                <h2 class="animated fadeInDown delay-2s" style="color: white">Robotics</h2>
               </div>
               <div class="col-lg-6 animated slideInRight delay-5s" id="item-2" style="background-color:lightgreen">
